src/objects/sf_devops__Project__c.object
<CustomObject>
    <description>A project helps you organize the work items and pipelines used for building your application.</description>
    <fields>
        <fullName>sf_devops__Description__c</fullName>
        <description>A description of the project.</description>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf_devops__Package_Directories__c</fullName>
        <description>Stores the filepath(s) of the sfdx-project.json&apos;s package directories</description>
        <label>Sfdx-project.json&apos;s Package Directories</label>
        <length>25000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sf_devops__Platform_Repository__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The repository used by this project to store Salesforce Platform metadata (Apex, CustomObject, etc.)</description>
        <label>Platform Repository</label>
        <referenceTo>sf_devops__Repository__c</referenceTo>
        <relationshipLabel>Platform Projects</relationshipLabel>
        <relationshipName>Platform_Projects</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Project</label>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>sf_devops__No_Platform_Repository_Change</fullName>
        <active>true</active>
        <description>Enforces that Platform_Repository__c cannot be changed.</description>
        <errorConditionFormula>ISCHANGED(  sf_devops__Platform_Repository__c  )</errorConditionFormula>
        <errorMessage>Platform_Repository__c cannot be modified.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>sf_devops__Unique_Name</fullName>
        <active>true</active>
        <description>Enforces that all projects have a unique name</description>
        <errorConditionFormula>AND(
  OR(
    ISNEW(),
    ISCHANGED( Name )
  ),
  NOT(
    ISBLANK (
      VLOOKUP( $ObjectType.sf_devops__Project__c.Fields.Name, 
               $ObjectType.sf_devops__Project__c.Fields.Name,
               Name )
     )
  )
)</errorConditionFormula>
        <errorMessage>Projects require a unique name.</errorMessage>
    </validationRules>
</CustomObject>